Fix menu on small screens.

--- a/src/Motorsports.Scaffolding.Core/wwwroot/css/site.css
+++ b/src/Motorsports.Scaffolding.Core/wwwroot/css/site.css
@@ -20,8 +20,16 @@
 .body-content {
   padding-left: 15px;
   padding-right: 15px;
-  padding-top: 50px;
+  padding-top: 35px;
   padding-bottom: 15px;
+}
+@media (max-width: 768px) {
+  .body-content {
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-top: 125px;
+    padding-bottom: 15px;
+  }
 }
 
 /* Custom CSS */
